@@ -21,8 +21,10 @@ import net.sinedkadis.terracompositio.registries.ModBlockEntities;
 import net.sinedkadis.terracompositio.util.ModItemStackHandler;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Mod.EventBusSubscriber(modid = TerraCompositio.MOD_ID, bus = Mod.EventBusSubscriber.Bus.FORGE)
 public class ConstructionDesorberBlockEntity extends AbstractDesorberBlockEntity {
@@ -68,7 +70,13 @@ public class ConstructionDesorberBlockEntity extends AbstractDesorberBlockEntity
                     return null;
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.collectingAndThen(
+                        Collectors.toList(),
+                        collectedList -> {
+                            Collections.shuffle(collectedList);
+                            return collectedList;
+                        }
+                ));
         int CFEToAdd = 5;
         for (ConstructionDesorberBlockEntity blockEntity : constructors){
             FluidTank fluidHandler1 = blockEntity.fluidHandler;
@@ -99,7 +107,13 @@ public class ConstructionDesorberBlockEntity extends AbstractDesorberBlockEntity
                     return null;
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.collectingAndThen(
+                        Collectors.toList(),
+                        collectedList -> {
+                            Collections.shuffle(collectedList);
+                            return collectedList;
+                        }
+                ));
         int CFEToRemove = 5;
         for (ConstructionDesorberBlockEntity blockEntity : constructors){
             if (blockEntity != null) {
